--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "bootstrap": "^4.1.1",
+    "material-design-iconic-font": "^2.2.0",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
     "vue-router": "^2.5.3",
@@ -69,7 +71,6 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
     "babili-webpack-plugin": "^0.1.2",
-    "bootstrap": "^4.1.1",
     "cfonts": "^1.1.3",
     "chai": "^4.0.0",
     "chalk": "^2.1.0",
