--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "bootstrap": "^4.1.1",
     "material-design-iconic-font": "^2.2.0",
     "vue": "^2.3.3",
+    "vue-breadcrumbs": "^1.1.2",
     "vue-electron": "^1.0.6",
     "vue-router": "^2.5.3",
     "vuex": "^2.3.1"
