--- a/package.json
+++ b/package.json
@@ -56,7 +56,10 @@
   "dependencies": {
     "axios": "^0.16.1",
     "bootstrap": "^4.1.1",
+    "luxon": "^1.3.2",
     "material-design-iconic-font": "^2.2.0",
+    "v-mask": "^1.3.2",
+    "vee-validate": "^2.1.0-beta.6",
     "vue": "^2.3.3",
     "vue-breadcrumbs": "^1.1.2",
     "vue-electron": "^1.0.6",
@@ -85,6 +88,7 @@
     "electron-debug": "^1.4.0",
     "electron-devtools-installer": "^2.2.0",
     "extract-text-webpack-plugin": "^3.0.0",
+    "faker": "^4.1.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
     "inject-loader": "^3.0.0",
