REFACTOR : Changement de système
Migration de electron-vue à electron-webpack

--- a/.gitignore
+++ b/.gitignore
@@ -60,7 +60,7 @@ Network Trash Folder
 Temporary Items
 .apdisk
 # ############
-# Electron-vue
+# Electron
 # ############
 .DS_Store
 dist/electron/*
