--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "dist:dir": "yarn dist --dir -c.compression=store -c.mac.identity=null"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^17.2.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "luxon": "^1.8.2",
     "material-design-iconic-font": "^2.2.0",
     "source-map-support": "^0.5.9",
@@ -18,7 +20,12 @@
     "vee-validate": "^2.1.3",
     "vue": "^2.5.17",
     "vue-breadcrumbs": "^1.1.2",
+    "vue-good-table": "^2.16.0",
+    "vue-infinite-loading": "^2.4.3",
     "vue-router": "^3.0.2",
+    "vue-spinner": "^1.0.3",
+    "vue-toasted": "^1.1.25",
+    "vue2-datepicker": "^2.6.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
