--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "luxon": "^1.8.2",
     "material-design-iconic-font": "^2.2.0",
+    "papaparse": "^4.6.2",
     "source-map-support": "^0.5.9",
     "v-mask": "^1.3.3",
     "vee-validate": "^2.1.3",
