--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "vue-spinner": "^1.0.3",
     "vue-toasted": "^1.1.25",
     "vue2-datepicker": "^2.6.2",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-map-fields": "^1.3.1"
   },
   "devDependencies": {
     "electron": "2.0.7",
