--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "material-design-iconic-font": "^2.2.0",
     "papaparse": "^4.6.2",
     "source-map-support": "^0.5.9",
+    "uuid": "^3.3.2",
     "v-mask": "^1.3.3",
     "vee-validate": "^2.1.3",
     "vue": "^2.5.17",
