--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 ELECTRON_WEBPACK_APP_COMPETITION_MINIMUM_ENTRANT=6
+ELECTRON_WEBPACK_APP_POOL_MIN_NUMBER=2
 ELECTRON_WEBPACK_APP_POOL_MIN_SIZE=2
 ELECTRON_WEBPACK_APP_POOL_MAX_SIZE=5
