--- a/package.json
+++ b/package.json
@@ -14,15 +14,24 @@
       "category": "public.app-category.sports"
     }
   },
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "@tweenjs/tween.js": "^17.2.0",
     "animate.css": "^3.7.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "electron": "2.0.7",
+    "electron-builder": "^20.39.0",
+    "electron-webpack": "^2.6.1",
+    "electron-webpack-vue": "^2.2.2",
+    "faker": "^4.1.0",
+    "file-loader": "^3.0.1",
     "luxon": "^1.8.2",
     "material-design-iconic-font": "^2.2.0",
+    "node-sass": "^4.12.0",
     "papaparse": "^4.6.2",
+    "sass-loader": "^7.1.0",
     "source-map-support": "^0.5.9",
     "upath": "^1.0.5",
     "uuid": "^3.3.2",
@@ -37,17 +46,7 @@
     "vue-toasted": "^1.1.25",
     "vue2-datepicker": "^2.6.2",
     "vuex": "^3.0.1",
-    "vuex-map-fields": "^1.3.1"
-  },
-  "devDependencies": {
-    "electron": "2.0.7",
-    "electron-builder": "^20.39.0",
-    "electron-webpack": "^2.6.1",
-    "electron-webpack-vue": "^2.2.2",
-    "faker": "^4.1.0",
-    "jquery": "^3.4.0",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^7.1.0",
+    "vuex-map-fields": "^1.3.1",
     "webpack": "^4.26.1"
   },
   "resolutions": {
