--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,13 @@ ELECTRON_WEBPACK_APP_POOL_MIN_NUMBER=2
 ELECTRON_WEBPACK_APP_POOL_MIN_SIZE=2
 ELECTRON_WEBPACK_APP_POOL_MAX_SIZE=5
 ELECTRON_WEBPACK_APP_LAST_POOL_OFFSET=2
+
+# TYPEORM_CONNECTION = mysql
+# TYPEORM_HOST = localhost
+# TYPEORM_USERNAME = root
+# TYPEORM_PASSWORD = admin
+# TYPEORM_DATABASE = test
+# TYPEORM_PORT = 3000
+# TYPEORM_SYNCHRONIZE = true
+# TYPEORM_LOGGING = true
+# TYPEORM_ENTITIES = entity/*.js,modules/**/entity/*.js
