--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "jspdf": "^1.5.3",
     "jspdf-autotable": "^3.2.4",
     "luxon": "^1.8.2",
+    "mariadb": "^2.1.1",
     "material-design-iconic-font": "^2.2.0",
     "node-sass": "^4.12.0",
     "papaparse": "^4.6.2",
     "sass-loader": "^7.1.0",
+    "sequelize": "^5.18.4",
     "source-map-support": "^0.5.9",
     "upath": "^1.0.5",
     "uuid": "^3.3.2",
