--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "animate.css": "^3.7.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
-    "bootstrap-vue": "^2.0.0-rc.27",
+    "bootstrap-vue": "^2.0.1",
     "electron": "2.0.7",
     "electron-builder": "^20.39.0",
     "electron-webpack": "^2.6.1",
@@ -40,7 +40,7 @@
     "uuid": "^3.3.2",
     "v-mask": "^1.3.3",
     "vee-validate": "^2.1.3",
-    "vue": "^2.5.17",
+    "vue": "^2.6.10",
     "vue-breadcrumbs": "^1.1.2",
     "vue-good-table": "^2.16.0",
     "vue-infinite-loading": "^2.4.3",
