--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "luxon": "^1.8.2",
     "mariadb": "^2.1.1",
     "material-design-iconic-font": "^2.2.0",
+    "mysql": "^2.17.1",
     "node-sass": "^4.12.0",
     "papaparse": "^4.6.2",
     "sass-loader": "^7.1.0",
     "sequelize": "^5.18.4",
     "source-map-support": "^0.5.9",
+    "sqlite3": "^4.1.0",
     "upath": "^1.0.5",
     "uuid": "^3.3.2",
     "v-mask": "^1.3.3",
@@ -50,7 +52,8 @@
     "vue2-datepicker": "^2.6.2",
     "vuex": "^3.0.1",
     "vuex-map-fields": "^1.3.1",
-    "webpack": "^4.26.1"
+    "webpack": "^4.26.1",
+    "webpack-node-externals": "^1.7.2"
   },
   "resolutions": {
     "upath": "^1.0.5"
