--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "source-map-support": "^0.5.9",
     "sqlite3": "^4.1.0",
     "upath": "^1.0.5",
+    "url-loader": "^2.2.0",
     "uuid": "^3.3.2",
     "v-mask": "^1.3.3",
     "vee-validate": "^2.1.3",
