--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "mariadb": "^2.1.1",
     "mysql": "^2.17.1",
     "sequelize": "^5.19.6",
-    "sqlite3": "^4.1.0"
+    "sqlite3": "^4.1.0",
+    "umzug": "^2.2.0"
   }
 }
