--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "vue-spinner": "^1.0.3",
     "vue-toasted": "^1.1.25",
     "vue2-datepicker": "^2.6.2",
+    "vue2-filters": "^0.8.0-beta.1",
     "vuex": "^3.0.1",
     "vuex-map-fields": "^1.3.1",
     "webpack": "^4.26.1",
