--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "askc",
-    "version": "0.0.0",
+    "version": "0.1.0-test",
     "description": "Kendo championship and grade management software",
     "author": {
         "name": "Kevin UNFRICHT",
