--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "askc",
-    "version": "0.1.0-test",
+    "version": "0.0.0",
     "description": "Kendo championship and grade management software",
     "author": {
         "name": "Kevin UNFRICHT",
@@ -25,8 +25,10 @@
     "scripts": {
         "dev": "electron-webpack dev",
         "compile": "electron-webpack",
-        "dist": "yarn compile && electron-builder",
-        "dist:dir": "yarn dist --dir -c.compression=store -c.mac.identity=null",
+        "build": "yarn compile && electron-builder",
+        "build:dir": "yarn build --dir -c.compression=store -c.mac.identity=null",
+        "build:win": "yarn build -w --x64 --ia32",
+        "build:linux": "yarn build -l",
         "postinstall": "electron-builder install-app-deps"
     },
     "devDependencies": {
