TEST : local windows 10 runner

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,10 @@
 stages:
   - build
 
-build:
-  image: slauta93/electron-builder-win
+windows job:
   stage: build
+  tags:
+    - windows
   #only:
   #  - tags
   artifacts:
