--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,13 +3,13 @@ stages:
 
 build job:
   stage: build
-  image: electronuserland/builder:wine
+  image: 
   #only:
   #  - tags
   artifacts:
     paths:
       - $CI_PROJECT_DIR/dist/*.*
   script:
-    - sed  -i '/version/s/[^.]*$/'"${CI_COMMIT_TAG}\"/" package.json
-    - yarn -v
+    - sed "s/0.0.0/1.0.0/g" package.json
+    # - sed "s/0.0.0/${CI_COMMIT_TAG}/g" package.json
     - yarn install && yarn build
