--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ build job:
     paths:
       - $CI_PROJECT_DIR/dist/*.*
   script:
-    - sed "s/0.0.0/1.0.0/g" package.json
+    - sed "s/0.0.0/1.0.0/g" package.json > _package.json && mv _package.json package.json
     # - sed "s/0.0.0/${CI_COMMIT_TAG}/g" package.json
-    - yarn install && yarn build
+    - yarn
+    - yarn build
