--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ stages:
 
 build job:
   stage: build
-  image: 
+  image: electronuserland/builder:wine
   #only:
   #  - tags
   artifacts:
@@ -12,5 +12,4 @@ build job:
   script:
     - sed "s/0.0.0/1.0.0/g" package.json > _package.json && mv _package.json package.json
     # - sed "s/0.0.0/${CI_COMMIT_TAG}/g" package.json
-    - yarn
-    - yarn build
+    - yarn && yarn build:all
