--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
             "category": "public.app-category.sports"
         },
         "win": {
-            "verifyUpdateCodeSignature": false
+            "verifyUpdateCodeSignature": false,
+            "target": [{
+                "target": "nsis",
+                "arch": ["x64", "ia32"]
+            }]
         },
-        "publish": {
-            "provider": "generic",
-            "url": "https://framagit.org/"
+        "linux": {
+            "target": [{ "target": "AppImage" }],
+            "category": "Sports"
         }
     },
     "scripts": {
@@ -30,7 +34,7 @@
         "compile": "electron-webpack",
         "build": "yarn compile && electron-builder",
         "build:dir": "yarn build --dir -c.compression=store -c.mac.identity=null",
-        "build:win": "yarn build -w --x64 --ia32",
+        "build:win": "yarn build -w",
         "build:linux": "yarn build -l",
         "build:all": "yarn build -wl",
         "postinstall": "electron-builder install-app-deps"
