NEW : publish key for autoupdate yml config from auto updater

--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     },
     "build": {
         "appId": "com.askc.app",
+        "publish": {
+            "provider": "generic",
+            "url": "AUTO_GENERATED"
+        },
         "mac": {
             "category": "public.app-category.sports"
         },
