NEW (docker) : webserver to test autoupdate in local

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,11 @@ services:
       MARIADB_PASSWORD: askc
     volumes:
       - mysqldata:/bitnami
+  web:
+    restart: always
+    image: php:latest
+    ports:
+      - 8083:80
 volumes:
   mysqldata:
     driver: local
