NEW : webserver to test auto update

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,11 @@ services:
       - mysqldata:/bitnami
   web:
     restart: always
-    image: php:latest
+    image: php:7.2-apache
     ports:
       - 8083:80
+    volumes:
+      - ./dist:/var/www/html
 volumes:
   mysqldata:
     driver: local
