--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,18 +1,21 @@
 stages:
   - build
 
+variables:
+  ELECTRON_WEBPACK_APP_UPDATE_TOKEN: $TOKEN_ACCESS
+
 build:
-  variables:
-    ELECTRON_WEBPACK_APP_UPDATE_TOKEN: $TOKEN_ACCESS
   stage: build
   image: electronuserland/builder:wine
-  # only:
-  #   - master
-  # artifacts:
-  #   paths:
-  #     - $CI_PROJECT_DIR/dist/*.*
+  only:
+    - tags
+  except:
+    - /^release/.*$/
+    - develop
+  artifacts:
+    paths:
+      - $CI_PROJECT_DIR/dist/*.*
   script:
-    - echo $PUBLISH_URL
-    # - sed "s/0.0.0/${CI_COMMIT_TAG}/g" package.json package.json > _package.json && mv _package.json package.json
-    # - sed "s/BUILD_PUBLISH_URL_AUTO_GENERATED/$PUBLISH_URL"
-    # - yarn && yarn build:all
+    - sed "s/0.0.0/${CI_COMMIT_TAG}/g" package.json > _package.json && mv _package.json package.json
+    - sed "s/BUILD_PUBLISH_URL_AUTO_GENERATED/$PUBLISH_URL/g" package.json > _package.json && mv _package.json package.json
+    - yarn && yarn build:all
