--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
         "vue-toasted": "^1.1.25",
         "vue2-datepicker": "^2.6.2",
         "vue2-filters": "^0.8.0-beta.1",
+        "vue2-slideout-panel": "^2.4.0",
         "vuex": "^3.0.1",
         "vuex-map-fields": "^1.3.1",
         "webpack": "^4.26.1",
