--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
         "vue2-datepicker": "^2.6.2",
         "vue2-filters": "^0.8.0-beta.1",
         "vue2-slideout-panel": "^2.4.0",
+        "vuedraggable": "^2.23.2",
         "vuex": "^3.0.1",
         "vuex-map-fields": "^1.3.1",
         "webpack": "^4.26.1",
