--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ ELECTRON_WEBPACK_APP_POOL_MIN_NUMBER=2
 ELECTRON_WEBPACK_APP_POOL_MIN_SIZE=2
 ELECTRON_WEBPACK_APP_POOL_MAX_SIZE=5
 ELECTRON_WEBPACK_APP_LAST_POOL_OFFSET=2
+ELECTRON_WEBPACK_APP_FIGHT_LIMIT_SCORE=2
+ELECTRON_WEBPACK_APP_FIGHT_NB_FOOL_GIVE_IPPON=2
