--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ ELECTRON_WEBPACK_APP_POOL_MAX_SIZE=5
 ELECTRON_WEBPACK_APP_LAST_POOL_OFFSET=2
 ELECTRON_WEBPACK_APP_FIGHT_LIMIT_SCORE=2
 ELECTRON_WEBPACK_APP_FIGHT_NB_FOOL_GIVE_IPPON=2
+ELECTRON_WEBPACK_APP_FIGHT_FOOL_CODE="△"
