--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ ELECTRON_WEBPACK_APP_LAST_POOL_OFFSET=2
 ELECTRON_WEBPACK_APP_FIGHT_LIMIT_SCORE=2
 ELECTRON_WEBPACK_APP_FIGHT_NB_FOOL_GIVE_IPPON=2
 ELECTRON_WEBPACK_APP_FIGHT_FOOL_CODE="△"
+ELECTRON_WEBPACK_APP_FIGHT_SCORE_REACHED_CODE="Ht"
