--- a/.env
+++ b/.env
@@ -5,7 +5,8 @@ ELECTRON_WEBPACK_APP_POOL_MAX_SIZE=5
 ELECTRON_WEBPACK_APP_LAST_POOL_OFFSET=2
 ELECTRON_WEBPACK_APP_FIGHT_LIMIT_SCORE=2
 ELECTRON_WEBPACK_APP_FIGHT_NB_FOOL_GIVE_IPPON=2
-ELECTRON_WEBPACK_APP_FIGHT_FOOL_CODE="&#9651" # Need to find a way to display this in Vue {{ }} without security vulnerabilities
+# Need to find a way to display this in Vue {{ }} without security vulnerabilities
+ELECTRON_WEBPACK_APP_FIGHT_FOOL_CODE=&#9651
 ELECTRON_WEBPACK_APP_FIGHT_SCORE_FOOL_CODE="I"
 ELECTRON_WEBPACK_APP_FIGHT_SCORE_FORFEIT_CODE="O"
 ELECTRON_WEBPACK_APP_FIGHT_SCORE_REACHED_CODE="Ht"
