UPDATE (score type data) : I > H

--- a/.env
+++ b/.env
@@ -7,6 +7,6 @@ ELECTRON_WEBPACK_APP_FIGHT_LIMIT_SCORE=2
 ELECTRON_WEBPACK_APP_FIGHT_NB_FOOL_GIVE_IPPON=2
 # Need to find a way to display this in Vue {{ }} without security vulnerabilities
 ELECTRON_WEBPACK_APP_FIGHT_FOOL_CODE=&#9651
-ELECTRON_WEBPACK_APP_FIGHT_SCORE_FOOL_CODE="I"
+ELECTRON_WEBPACK_APP_FIGHT_SCORE_FOOL_CODE="H"
 ELECTRON_WEBPACK_APP_FIGHT_SCORE_FORFEIT_CODE="O"
 ELECTRON_WEBPACK_APP_FIGHT_SCORE_REACHED_CODE="Ht"
