NEW (competition/create) : team number place

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 ELECTRON_WEBPACK_APP_COMPETITION_MINIMUM_ENTRANT=6
+ELECTRON_WEBPACK_APP_TEAM_PLACE_NUMBER_MIN=2
+ELECTRON_WEBPACK_APP_TEAM_PLACE_NUMBER_MAX=5
 ELECTRON_WEBPACK_APP_POOL_MIN_NUMBER=2
 ELECTRON_WEBPACK_APP_POOL_MIN_SIZE=2
 ELECTRON_WEBPACK_APP_POOL_MAX_SIZE=5
