--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "askc",
+    "name": "hajime",
     "version": "0.0.0",
     "description": "Kendo championship and grade management software",
     "author": {
