UPDATE (package.json) : license

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "name": "Kevin UNFRICHT",
         "email": "unfricht.kevin@hotmail.fr"
     },
-    "license": "SEE LICENSE IN LICENSE.md",
+    "license": "MIT",
     "homepage": "https://github.com/Maus3rSR/Hajime.git",
     "repository": {
         "type": "git",
