--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
         "build:win": "yarn build -w",
         "build:linux": "yarn build -l",
         "build:all": "yarn build -wl",
-        "postinstall": "electron-builder install-app-deps"
+        "postinstall": "electron-builder install-app-deps",
+        "release": "electron-builder --mac --windows --linux --publish always"
     },
     "devDependencies": {
         "@growthbunker/vueflags": "^0.1.2",
@@ -61,7 +62,7 @@
         "bootstrap": "^4.3.1",
         "bootstrap-vue": "^2.15.0",
         "electron": "5.0.6",
-        "electron-builder": "^20.39.0",
+        "electron-builder": "^22.8.1",
         "electron-log": "^3.0.8",
         "electron-store": "^5.0.0",
         "electron-webpack": "^2.6.1",
