--- a/package.json
+++ b/package.json
@@ -106,7 +106,6 @@
         "sequelize": "^5.19.6",
         "source-map-support": "^0.5.9",
         "sqlite3": "^4.1.0",
-        "umzug": "^2.2.0",
-        "update-electron-app": "^2.0.1"
+        "umzug": "^2.2.0"
     }
 }
