--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,12 @@ jobs:
       - name: Check out Git repository
         uses: actions/checkout@v1
 
+      - name: .env file
+        uses: canastro/copy-file-action@master
+        with:
+          source: ".env.example"
+          target: ".env"
+
       - name: Install Node.js, NPM and Yarn
         uses: actions/setup-node@v1
 
