--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        # os: [macos-latest, ubuntu-latest, windows-latest]
+        # os: [windows-latest, ubuntu-latest, macos-latest]
         os: [windows-latest]
 
     steps:
@@ -25,6 +25,6 @@ jobs:
         uses: samuelmeuli/action-electron-builder@v1
         with:
           # Launch yarn compile before launching electron-builder
-          build_script_name: "compile"
+          build_script_name: "env && compile"
           github_token: ${{ secrets.github_token }}
           release: ${{ startsWith(github.ref, 'refs/tags/') }}
