--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,8 @@ jobs:
 
       - name: Install Node.js, NPM and Yarn
         uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
 
       - name: Build/release Electron app
         uses: samuelmeuli/action-electron-builder@v1
