--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
         "upath": "^1.0.5"
     },
     "dependencies": {
+        "electron-updater": "^4.3.5",
         "mariadb": "^2.1.1",
         "mysql": "^2.17.1",
         "sequelize": "^5.19.6",
