FIX (publish) : owner github, not person

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "appId": "software.hajime.app",
         "publish": {
             "provider": "github",
-            "owner": "Kevin UNFRICHT",
+            "owner": "Maus3rSR",
             "vPrefixedTagName": false
         },
         "mac": {
