--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,5 @@ ELECTRON_WEBPACK_ISSUE_EMAIL="hajime-issue@fire.fundersclub.com"
 ELECTRON_WEBPACK_AUTHOR_PAGE="https://www.linkedin.com/in/kevinunfricht/"
 ELECTRON_WEBPACK_GITHUB_PAGE="https://github.com/Maus3rSR/Hajime/"
 ELECTRON_WEBPACK_LICENSE_PAGE="https://github.com/Maus3rSR/Hajime/blob/master/LICENSE"
+ELECTRON_WEBPACK_PAYPAL_PAGE="https://www.paypal.com/paypalme/mausersr"
+ELECTRON_WEBPACK_PATREON_PAGE="https://www.patreon.com/hajime_software"
