NEW : add release commands

--- a/package.json
+++ b/package.json
@@ -51,9 +51,14 @@
         "build": "yarn compile && electron-builder",
         "build:fast": "yarn build --dir -c.compression=store -c.mac.identity=null",
         "build:win": "yarn build -w",
+        "build:mac": "yarn build -m",
         "build:linux": "yarn build -l",
-        "build:all": "yarn build -wl",
-        "release": "electron-builder --mac --windows --linux --publish always",
+        "build:all": "yarn build -mwl",
+        "release": "electron-builder --publish always",
+        "release:win": "yarn release --windows",
+        "release:mac": "yarn release --mac",
+        "release:linux": "yarn release --linux",
+        "release:all": "yarn release --mac --windows --linux",
         "postinstall": "electron-builder install-app-deps",
         "copy": "node scripts/copy.js"
     },
