REFACTOR (i18n) : .env locale list + gb.json > en_GB.json

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 ELECTRON_WEBPACK_APP_NAME="Hajime"
 
-ELECTRON_WEBPACK_APP_LOCALE_DEFAULT="gb"
-ELECTRON_WEBPACK_APP_LOCALE_FALLBACK="gb"
+ELECTRON_WEBPACK_APP_LOCALE_LIST="en_GB:English,fr:Français"
+ELECTRON_WEBPACK_APP_LOCALE_DEFAULT="en_GB"
+ELECTRON_WEBPACK_APP_LOCALE_FALLBACK="en_GB"
 
 ELECTRON_WEBPACK_APP_COMPETITION_MINIMUM_ENTRANT=6
 
