🌐 Enable 🇮🇹 language in UI

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 ELECTRON_WEBPACK_APP_NAME="Hajime"
 
-ELECTRON_WEBPACK_APP_LOCALE_LIST="en_GB:English,fr:Français"
+ELECTRON_WEBPACK_APP_LOCALE_LIST="en_GB:English,fr:Français,it:Italiano"
 ELECTRON_WEBPACK_APP_LOCALE_DEFAULT="en_GB"
 ELECTRON_WEBPACK_APP_LOCALE_FALLBACK="en_GB"
 
