--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,31 +1,31 @@
 name: Build/release
 
 on:
-  push:
-    tags:
-      - '*'
+    push:
+        tags:
+            - '*'
 
 jobs:
-  release:
-    runs-on: ${{ matrix.os }}
+    release:
+        runs-on: ${{ matrix.os }}
 
-    strategy:
-      matrix:
-        os: [windows-latest, ubuntu-latest, macos-latest]
+        strategy:
+            matrix:
+                os: [windows-latest, ubuntu-latest, macos-latest]
 
-    steps:
-      - name: Check out project 🛎️
-        uses: actions/checkout@v1
+        steps:
+            - name: Check out project 🛎️
+              uses: actions/checkout@v1
 
-      - name: Install dependancies 🔧
-        uses: actions/setup-node@v1
-        with:
-          node-version: '12.x'
+            - name: Install dependancies 🔧
+              uses: actions/setup-node@v1
+              with:
+                  node-version: '12.x'
 
-      - name: Build & release app 🚀
-        uses: samuelmeuli/action-electron-builder@v1
-        with:
-          # Launch yarn env && compile before launching electron-builder
-          build_script_name: "prebuild"
-          github_token: ${{ secrets.github_token }}
-          release: true
+            - name: Build & release app 🚀
+              uses: samuelmeuli/action-electron-builder@v1
+              with:
+                  # Launch yarn env && compile before launching electron-builder
+                  build_script_name: 'prebuild'
+                  github_token: ${{ secrets.github_token }}
+                  release: true
