--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "devDependencies": {
         "@tauri-apps/api": "^1.0.0-beta.6",
         "@tauri-apps/cli": "^1.0.0-beta.9",
+        "@tauri-apps/tauri-forage": "^1.0.0-beta.2",
         "@vitejs/plugin-vue": "^1.3.0",
         "@vue/compiler-sfc": "^3.0.5",
         "animate.css": "^4.1.1",
