--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "eslint": "^7.32.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-vue": "^7.16.0",
+        "flag-icon-css": "^3.5.0",
         "postcss": "latest",
         "prettier": "^2.3.2",
         "tailwindcss": "latest",
