--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
         "vue": "^3.0.5"
     },
     "devDependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.36",
+        "@fortawesome/free-brands-svg-icons": "^5.15.4",
+        "@fortawesome/free-regular-svg-icons": "^5.15.4",
+        "@fortawesome/free-solid-svg-icons": "^5.15.4",
+        "@fortawesome/vue-fontawesome": "prerelease",
         "@tauri-apps/api": "^1.0.0-beta.6",
         "@tauri-apps/cli": "^1.0.0-beta.9",
         "@tauri-apps/tauri-forage": "^1.0.0-beta.2",
