--- a/env/.env.example
+++ b/env/.env.example
@@ -24,6 +24,7 @@ VITE_APP_FIGHT_SCORE_REACHED_CODE="Ht"
 
 VITE_ISSUE_EMAIL="hajime-issue@fire.fundersclub.com"
 VITE_AUTHOR_PAGE="https://www.linkedin.com/in/kevinunfricht/"
+VITE_WEBSITE_PAGE="https://www.hajime.software/"
 VITE_GITHUB_PAGE="https://github.com/Maus3rSR/Hajime/"
 VITE_LICENSE_PAGE="https://github.com/Maus3rSR/Hajime/blob/master/LICENSE"
 VITE_PAYPAL_PAGE="https://www.paypal.com/paypalme/mausersr"
