--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "serve": "vite preview"
     },
     "dependencies": {
-        "vue": "^3.0.5"
+        "vue": "3.2.6"
     },
     "devDependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -33,7 +33,7 @@
         "@vue/compiler-sfc": "^3.0.5",
         "animate.css": "^4.1.1",
         "autoprefixer": "latest",
-        "daisyui": "^1.12.0",
+        "daisyui": "1.14.0",
         "eslint": "^7.32.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-vue": "^7.16.0",
