--- a/package.json
+++ b/package.json
@@ -18,33 +18,33 @@
         "serve": "vite preview"
     },
     "dependencies": {
-        "vue": "3.2.6"
-    },
-    "devDependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.2.36",
         "@fortawesome/free-brands-svg-icons": "^5.15.4",
         "@fortawesome/free-regular-svg-icons": "^5.15.4",
         "@fortawesome/free-solid-svg-icons": "^5.15.4",
         "@fortawesome/vue-fontawesome": "prerelease",
+        "animate.css": "^4.1.1",
+        "daisyui": "1.14.0",
+        "flag-icon-css": "^3.5.0",
+        "vue": "3.2.6",
+        "vue-i18n": "next",
+        "vue-router": "4"
+    },
+    "devDependencies": {
         "@tauri-apps/api": "^1.0.0-beta.6",
         "@tauri-apps/cli": "^1.0.0-beta.9",
         "@tauri-apps/tauri-forage": "^1.0.0-beta.2",
         "@vitejs/plugin-vue": "^1.3.0",
         "@vue/compiler-sfc": "^3.0.5",
-        "animate.css": "^4.1.1",
         "autoprefixer": "latest",
-        "daisyui": "1.14.0",
         "eslint": "^7.32.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-vue": "^7.16.0",
-        "flag-icon-css": "^3.5.0",
         "postcss": "latest",
         "prettier": "^2.3.2",
         "tailwindcss": "latest",
         "typescript": "^4.3.2",
         "vite": "^2.4.4",
-        "vue-i18n": "next",
-        "vue-router": "4",
         "vue-tsc": "^0.2.2"
     }
 }
