--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "animate.css": "^4.1.1",
         "daisyui": "1.14.0",
         "flag-icon-css": "^3.5.0",
-        "vee-validate": "next",
+        "vee-validate": "4.5",
         "vue": "3.2.6",
         "vue-i18n": "next",
         "vue-router": "4",
