➖ ➕ (plugins) : add toast, remove spinners

--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
         "@vee-validate/rules": "^4.4.7",
         "animate.css": "^4.1.1",
         "daisyui": "1.14.0",
-        "epic-spinners": "^1.1.0",
         "flag-icon-css": "^3.5.0",
+        "mosha-vue-toastify": "^1.0.23",
         "vee-validate": "4.5",
         "vue": "3.2.6",
         "vue-i18n": "next",
