--- a/env/.env.example
+++ b/env/.env.example
@@ -22,7 +22,7 @@ VITE_APP_FIGHT_SCORE_FOOL_CODE="H"
 VITE_APP_FIGHT_SCORE_FORFEIT_CODE="O"
 VITE_APP_FIGHT_SCORE_REACHED_CODE="Ht"
 
-VITE_ISSUE_EMAIL="hajime-issue@fire.fundersclub.com"
+VITE_WEBHOOK_FEEDBACK_URL="https://n8n.mausersr.app/webhook/hajime-feedback"
 VITE_AUTHOR_PAGE="https://www.linkedin.com/in/kevinunfricht/"
 VITE_WEBSITE_PAGE="https://www.hajime.software/"
 VITE_GITHUB_PAGE="https://github.com/Maus3rSR/Hajime/"
