--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "mosha-vue-toastify": "^1.0.23",
         "vee-validate": "4.5",
         "vue": "3.2.6",
+        "vue-composable": "^1.0.0-beta.24",
         "vue-i18n": "next",
         "vue-router": "4",
         "vue3-tabs-component": "^1.0.3"
