--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "flag-icon-css": "^3.5.0",
         "mosha-vue-toastify": "^1.0.23",
         "vee-validate": "4.5",
+        "vite-plugin-html": "^2.1.1",
         "vue": "3.2.6",
         "vue-composable": "^1.0.0-beta.24",
         "vue-i18n": "next",
