--- a/env/.env.example
+++ b/env/.env.example
@@ -1,5 +1,7 @@
 VITE_APP_NAME="Hajime"
 
+VITE_APP_CSP="default-src 'self'; style-src 'self' 'unsafe-inline'; connect-src 'self';"
+
 VITE_APP_LOCALE_LIST="en_GB:English,fr:Français,it:Italiano"
 VITE_APP_LOCALE_DEFAULT="en_GB"
 VITE_APP_LOCALE_FALLBACK="en_GB"
