--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
-# ############
-# Project
-# ############
-*.bak
-*.hot*
-.env
-.env*.local
+# PROJECT OVERRIDE AT END OF FILE
+
 # ############
 # Package Manager
 # ############
@@ -79,3 +74,12 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# ############
+# Project
+# ############
+*.bak
+*.hot*
+.env
+.env*.local
+!src/plugins/icon
