--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "@tauri-apps/api": "^1.0.0-beta.6",
         "@tauri-apps/cli": "^1.0.0-beta.9",
         "@tauri-apps/tauri-forage": "^1.0.0-beta.2",
+        "@types/jest": "^27.0.3",
         "@types/node": "^17.0.4",
         "@vitejs/plugin-vue": "^1.3.0",
         "@vue/compiler-sfc": "^3.0.5",
@@ -54,10 +55,12 @@
         "eslint": "^7.32.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-vue": "^7.16.0",
+        "jest": "^27.4.5",
         "postcss": "latest",
         "prettier": "^2.3.2",
         "prisma": "^3.7.0",
         "tailwindcss": "latest",
+        "ts-jest": "^27.1.2",
         "ts-node": "^10.4.0",
         "typescript": "^4.4.4",
         "vite": "^2.4.4",
