🔧 (tauri) update cargo.toml info

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "app"
-version = "0.1.0"
-description = "A Tauri App"
-authors = [ "you" ]
-license = ""
-repository = ""
+version = "0.1.2-prealpha"
+description = "Hajime - Weapon Martial Art Software Management"
+authors = [ "Kevin UNFRICHT" ]
+license = "MIT"
+repository = "https://github.com/Maus3rSR/Hajime.git"
 default-run = "app"
 edition = "2018"
 build = "src/build.rs"
